...
        source={require('@/assets/images/icon.png')}
        className="h-22 w-22 self-center rounded-[20px]"
        style={{ borderCurve: 'continuous' } as any}
      />
      <View className="pt-9">
        <Text variant="largeTitle" accessibilityRole="header">
          Welcome to
        </Text>
        <Text variant="largeTitle" accessibilityRole="header">
          RunBro
        </Text>
      </View>
      <View className="gap-6 pt-7">
...
